# volk

./: .clang-format  .cmake-format.py  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  .zenodo.json  AUTHORS_GRANTING_LGPL_LICENSE.txt  AUTHORS_RESUBMITTING_UNDER_LGPL_LICENSE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING-LGPL  Doxyfile.in  DoxygenLayout.xml  README  README.md  appveyor.yml  compile.sh  cross_build_boost.sh  main.c  main.cc  test_rvv.c  test_rvv2.c  volk.pc.in
.github/workflows/: android_build.yml  check-pr-formatting.yml  publish_docs.yml  run-tests-rvv.yml  run-tests.yml
apps/: .volk_profile.cc.swp  CMakeLists.txt  plot_best_vs_generic.py  volk-config-info.cc  volk_option_helpers.cc  volk_option_helpers.h  volk_profile.cc  volk_profile.h
cmake/: cmake_uninstall.cmake.in
cmake/Checks/: check-rvv-intrinsics.c
cmake/Modules/: CMakeParseArgumentsCopy.cmake  FindFILESYSTEM.cmake  FindORC.cmake  VolkAddTest.cmake  VolkBuildTypes.cmake  VolkConfig.cmake.in  VolkConfigVersion.cmake.in  VolkPython.cmake  VolkVersion.cmake
cmake/Toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  arm_cortex_a15_hardfp_native.cmake  arm_cortex_a53_hardfp_native.cmake  arm_cortex_a72_hardfp_native.cmake  arm_cortex_a76_hardfp_native.cmake  arm_cortex_a8_hardfp_native.cmake  arm_cortex_a8_softfp_native.cmake  arm_cortex_a9_hardfp_native.cmake  intel-sde.cmake  oe-sdk_cross.cmake  rv64gcv-linux-gnu.cmake
cmake/msvc/: config.h
cmake/msvc/sys/: time.h
docs/: AUTHORS_RESUBMITTING_UNDER_LGPL_LICENSE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  extending_volk.dox  kernels.dox  main_page.dox  simd_patterns.md  terms_and_techniques.dox  using_volk.dox  versioning.md
include/volk/: constants.h  logging.h  saturation_arithmetic.h  sse2neon.h  volk.h  volk_alloc.hh  volk_avx2_fma_intrinsics.h  volk_avx2_intrinsics.h  volk_avx512_intrinsics.h  volk_avx_intrinsics.h  volk_common.h  volk_complex.h  volk_malloc.h  volk_mathfun.h  volk_neon_intrinsics.h  volk_prefs.h  volk_rvv_intrinsics.h  volk_sse3_intrinsics.h  volk_sse_intrinsics.h  volk_version.h.in
kernels/: README.md  README.txt
kernels/volk/: volk_16i_32fc_dot_prod_32fc.h  volk_16i_branch_4_state_8.h  volk_16i_convert_8i.h  volk_16i_max_star_16i.h  volk_16i_max_star_horizontal_16i.h  volk_16i_permute_and_scalar_add.h  volk_16i_s32f_convert_32f.h  volk_16i_x2_add_saturated_16i.h  volk_16i_x2_saturated_sum_16i.h  volk_16i_x4_quad_max_star_16i.h  volk_16i_x5_add_quad_16i_x4.h  volk_16ic_convert_32fc.h  volk_16ic_deinterleave_16i_x2.h  volk_16ic_deinterleave_real_16i.h  volk_16ic_deinterleave_real_8i.h  volk_16ic_magnitude_16i.h  volk_16ic_s32f_deinterleave_32f_x2.h  volk_16ic_s32f_deinterleave_real_32f.h  volk_16ic_s32f_magnitude_32f.h  volk_16ic_x2_dot_prod_16ic.h  volk_16ic_x2_multiply_16ic.h  volk_16u_byteswap.h  volk_16u_byteswappuppet_16u.h  volk_16u_x2_add_saturated_16u.h  volk_16u_x2_saturated_sum_16u.h  volk_32f_64f_add_64f.h  volk_32f_64f_multiply_64f.h  volk_32f_8u_polarbutterfly_32f.h  volk_32f_8u_polarbutterflypuppet_32f.h  volk_32f_accumulator_s32f.h  volk_32f_acos_32f.h  volk_32f_asin_32f.h  volk_32f_atan_32f.h  volk_32f_binary_slicer_32i.h  volk_32f_binary_slicer_8i.h  volk_32f_convert_64f.h  volk_32f_cos_32f.h  volk_32f_exp_32f.h  volk_32f_expfast_32f.h  volk_32f_index_max_16u.h  (+127 more)
kernels/volk/asm/neon/: volk_16i_max_star_horizontal_16i.s  volk_32f_s32f_multiply_32f_a_neonasm.s  volk_32f_x2_add_32f_a_neonasm.s  volk_32f_x2_add_32f_a_neonpipeline.s  volk_32f_x2_add_32f_neonasm.s  volk_32f_x2_add_32f_neonpipeline.s  volk_32f_x2_dot_prod_32f_a_neonasm.s  volk_32f_x2_dot_prod_32f_a_neonasm_opts.s  volk_32f_x2_dot_prod_32f_neonasm.s  volk_32fc_32f_dot_prod_32fc_a_neonasmvmla.s  volk_32fc_32f_dot_prod_32fc_a_neonpipeline.s  volk_32fc_32f_dot_prod_32fc_a_unrollasm.s  volk_32fc_x2_dot_prod_32fc_a_neonasm_opttests.s  volk_32fc_x2_multiply_32fc_a_neonasm.s  volk_32fc_x2_multiply_32fc_neonasm.s
kernels/volk/asm/orc/: volk_16ic_deinterleave_16i_x2_a_orc_impl.orc  volk_16ic_deinterleave_real_8i_a_orc_impl.orc  volk_16ic_s32f_deinterleave_32f_x2_a_orc_impl.orc  volk_16u_byteswap_a_orc_impl.orc  volk_32f_s32f_add_32f_a_orc_impl.orc  volk_32f_s32f_multiply_32f_a_orc_impl.orc  volk_32f_s32f_normalize_a_orc_impl.orc  volk_32f_x2_add_32f_a_orc_impl.orc  volk_32f_x2_divide_32f_a_orc_impl.orc  volk_32f_x2_max_32f_a_orc_impl.orc  volk_32f_x2_min_32f_a_orc_impl.orc  volk_32f_x2_multiply_32f_a_orc_impl.orc  volk_32f_x2_subtract_32f_a_orc_impl.orc  volk_32fc_32f_multiply_32fc_a_orc_impl.orc  volk_32fc_s32f_magnitude_16i_a_orc_impl.orc  volk_32fc_x2_multiply_32fc_a_orc_impl.orc  volk_32i_x2_and_32i_a_orc_impl.orc  volk_32i_x2_or_32i_a_orc_impl.orc  volk_8i_convert_16i_a_orc_impl.orc  volk_8i_convert_32f_a_orc_impl.orc  volk_8i_convert_64f_a_orc_impl.orc  volk_8i_s32f_convert_32f_a_orc_impl.orc  volk_8u_convert_32f_a_orc_impl.orc  volk_8u_convert_64f_a_orc_impl.orc
kernels/volk/asm/riscv/: volk_32f_s32f_multiply_32f_sifive_u74.s  volk_32fc_x2_dot_prod_32fc_sifive_u74.s
lib/: CMakeLists.txt  constants.c.in  kernel_tests.h  qa_utils.cc  qa_utils.h  testqa.cc  volk_malloc.c  volk_prefs.c  volk_rank_archs.c  volk_rank_archs.h
python/volk_modtool/: CMakeLists.txt  README  __init__.py  cfg.py  volk_modtool  volk_modtool_generate.py
scripts/ci/: cross_build_boost.sh  download_intel_sde.sh
scripts/licensing/: count_contrib.sh
scripts/tools/: compare_volk_profiles  release.sh  run_citations_update.py  update_citations.sh
tests/: CMakeLists.txt  test_volk_32f_x3_sum_of_poly_32f.cc  test_volk_32fc_s32fc_x2_rotator2_32fc.cc  test_volk_32fc_x2_multiply_32fc.cc  test_volk_paths.cc  volk_test.cc  volk_test.h
tmpl/: volk.pc.in  volk.tmpl.c  volk.tmpl.h  volk_config_fixed.tmpl.h  volk_cpu.tmpl.c  volk_cpu.tmpl.h  volk_dynamic_dispatch.tmpl.h  volk_machine_xxx.tmpl.c  volk_machines.tmpl.c  volk_machines.tmpl.h  volk_static_dispatch.tmpl.h  volk_typedefs.tmpl.h
tools/: release.sh
utest/: mk  test_stdmean.cpp  ts
